feature: create quiz

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">QuizYourCircle</string>
+    <string name="app_name">Quiz Your Mates</string>
     <string name="enter_question">Enter Question</string>
 </resources>
